// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LiveshoppingWidget /> should not render the widget without any data 1`] = `""`;

exports[`<LiveshoppingWidget /> should render the widget with a slider for multiple products 1`] = `
<div
  className="css-9a70pf"
>
  <ImageSlider
    autoPlay={false}
    className=""
    classNames={
      Object {
        "indicator": Object {
          "bullets": "css-1yv2jt6",
        },
      }
    }
    controls={false}
    disabled={false}
    indicators={true}
    initialSlide={0}
    interval={3000}
    loop={true}
    maxIndicators={null}
    onSlideChange={null}
    slidesPerView={1}
    snapItems={true}
  >
    <div
      className="css-1allyey"
      key="1234"
    >
      <Card
        className=""
      >
        <Link
          className=""
          href="/item/31323334"
        >
          <Grid
            className=""
            component="ul"
            wrap={false}
          >
            <GridItem
              className="css-cx3b8y"
              component="li"
              grow={0}
              shrink={1}
            >
              <ProductImage
                alt="First product"
                animating={true}
                forcePlaceholder={false}
                highestResolutionLoaded={[Function]}
                ratio={null}
                resolutions={
                  Array [
                    Object {
                      "blur": 2,
                      "height": 50,
                      "width": 50,
                    },
                    Object {
                      "height": 440,
                      "width": 440,
                    },
                  ]
                }
                src="http://placekitten.com/300/300"
              />
            </GridItem>
            <GridItem
              className="css-1dwh8zf"
              component="li"
              grow={0}
              shrink={1}
            >
              <div>
                <Ellipsis
                  className="css-d6bxso"
                  ellipsis="..."
                  rows={2}
                >
                  First product
                </Ellipsis>
              </div>
              <Grid
                className="css-13fwjl7"
                component="ul"
                wrap={false}
              >
                <GridItem
                  className=""
                  component="li"
                  grow={0}
                  shrink={1}
                >
                  <PriceStriked
                    className="css-osh41h"
                    currency="EUR"
                    value={20}
                  />
                </GridItem>
                <GridItem
                  className=""
                  component="li"
                  grow={0}
                  shrink={1}
                >
                  <Price
                    className="css-ljd097"
                    currency="EUR"
                    discounted={false}
                    fractions={true}
                    taxDisclaimer={false}
                    unitPrice={100}
                    unitPriceMin={0}
                  />
                </GridItem>
              </Grid>
            </GridItem>
          </Grid>
        </Link>
      </Card>
    </div>
    <div
      className="css-1allyey"
      key="1235"
    >
      <Card
        className=""
      >
        <Link
          className=""
          href="/item/31323335"
        >
          <Grid
            className=""
            component="ul"
            wrap={false}
          >
            <GridItem
              className="css-cx3b8y"
              component="li"
              grow={0}
              shrink={1}
            >
              <ProductImage
                alt="Second product"
                animating={true}
                forcePlaceholder={false}
                highestResolutionLoaded={[Function]}
                ratio={null}
                resolutions={
                  Array [
                    Object {
                      "blur": 2,
                      "height": 50,
                      "width": 50,
                    },
                    Object {
                      "height": 440,
                      "width": 440,
                    },
                  ]
                }
                src="http://placekitten.com/300/300"
              />
            </GridItem>
            <GridItem
              className="css-1dwh8zf"
              component="li"
              grow={0}
              shrink={1}
            >
              <div>
                <Ellipsis
                  className="css-d6bxso"
                  ellipsis="..."
                  rows={2}
                >
                  Second product
                </Ellipsis>
              </div>
              <Grid
                className="css-13fwjl7"
                component="ul"
                wrap={false}
              >
                <GridItem
                  className=""
                  component="li"
                  grow={0}
                  shrink={1}
                >
                  <PriceStriked
                    className="css-osh41h"
                    currency="EUR"
                    value={20}
                  />
                </GridItem>
                <GridItem
                  className=""
                  component="li"
                  grow={0}
                  shrink={1}
                >
                  <Price
                    className="css-ljd097"
                    currency="EUR"
                    discounted={false}
                    fractions={true}
                    taxDisclaimer={false}
                    unitPrice={100}
                    unitPriceMin={0}
                  />
                </GridItem>
              </Grid>
            </GridItem>
          </Grid>
        </Link>
      </Card>
    </div>
  </ImageSlider>
</div>
`;

exports[`<LiveshoppingWidget /> should render the widget with no slider for one product 1`] = `
<div
  className="css-9a70pf"
>
  <ImageSlider
    autoPlay={false}
    className=""
    classNames={
      Object {
        "indicator": Object {
          "bullets": "css-1yv2jt6",
        },
      }
    }
    controls={false}
    disabled={false}
    indicators={true}
    initialSlide={0}
    interval={3000}
    loop={true}
    maxIndicators={null}
    onSlideChange={null}
    slidesPerView={1}
    snapItems={true}
  >
    <div
      className="css-1allyey"
      key="1234"
    >
      <Card
        className=""
      >
        <Link
          className=""
          href="/item/31323334"
        >
          <Grid
            className=""
            component="ul"
            wrap={false}
          >
            <GridItem
              className="css-cx3b8y"
              component="li"
              grow={0}
              shrink={1}
            >
              <ProductImage
                alt="First product"
                animating={true}
                forcePlaceholder={false}
                highestResolutionLoaded={[Function]}
                ratio={null}
                resolutions={
                  Array [
                    Object {
                      "blur": 2,
                      "height": 50,
                      "width": 50,
                    },
                    Object {
                      "height": 440,
                      "width": 440,
                    },
                  ]
                }
                src="http://placekitten.com/300/300"
              />
            </GridItem>
            <GridItem
              className="css-1dwh8zf"
              component="li"
              grow={0}
              shrink={1}
            >
              <div>
                <Ellipsis
                  className="css-d6bxso"
                  ellipsis="..."
                  rows={2}
                >
                  First product
                </Ellipsis>
              </div>
              <Grid
                className="css-13fwjl7"
                component="ul"
                wrap={false}
              >
                <GridItem
                  className=""
                  component="li"
                  grow={0}
                  shrink={1}
                >
                  <PriceStriked
                    className="css-osh41h"
                    currency="EUR"
                    value={20}
                  />
                </GridItem>
                <GridItem
                  className=""
                  component="li"
                  grow={0}
                  shrink={1}
                >
                  <Price
                    className="css-ljd097"
                    currency="EUR"
                    discounted={false}
                    fractions={true}
                    taxDisclaimer={false}
                    unitPrice={100}
                    unitPriceMin={0}
                  />
                </GridItem>
              </Grid>
            </GridItem>
          </Grid>
        </Link>
      </Card>
    </div>
  </ImageSlider>
</div>
`;
